# CTranslate2

./: CMakeLists.txt  README.md  build.sh  pyproject.toml  requirements.txt  test_ctranslate2.py
benchmarks/: metal_ops_benchmark.cpp
cli/: translator.cc
docs/: conf.py  generate.py
examples/llama2/: chat.py  requirements.txt
examples/llama3/: chat.py  requirements.txt
python/: setup.py
python/cpp/: exports.def  module.cc  module.h  whisper.cc
python/ctranslate2/: extensions.py
python/ctranslate2/converters/: converter.py  fairseq.py  marian.py  openai_gpt2.py  opennmt_py.py  opennmt_tf.py  opus_mt.py  transformers.py  utils.py
python/ctranslate2/specs/: attention_spec.py  model_spec.py  transformer_spec.py  wav2vec2_spec.py  whisper_spec.py
python/tests/: test_marian.py  test_opennmt_py.py  test_opennmt_tf.py  test_spec.py  test_transformers.py  test_translator.py
src/: device.h
src/metal/: audio_processing.h  audio_processing.metal  audio_processing.mm  metal_allocator.h  metal_allocator.mm  metal_device.h  metal_device.mm  metal_kernels.h  metal_kernels.metal  metal_kernels.mm  metal_utils.h  metal_utils.mm  shaders.metal  speaker_manager.h  speaker_manager.mm  speaker_profile.h  speaker_profile.mm
tests/: CMakeLists.txt  metal_ops_test.cpp
tests/metal/: benchmark_metal_ops.cc  test_metal_memory.cc  test_metal_memory.mm  test_metal_ops.cc
tools/: tune_inter_intra.py
tools/benchmark/: benchmark.py  benchmark_all.py
tools/benchmark/opennmt_ende_wmt14/opennmt_py/: convertv2_v3.py
tools/benchmark_tensor_parallel/: benchmark.py  requirements.txt
